--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url("https://img.freepik.com/free-vector/neon-light-arrow-direction-perspective_1017-22033.jpg?w=1380&t=st=1682401778~exp=1682402378~hmac=3305200276c77663a38d4525fd15098fc582c5ec4b0aa28a062ac6d3880e3c82");
+    background-image: url("game2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
