--- a/style.css
+++ b/style.css
@@ -1,61 +1,65 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-image: url("game2.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    overflow: hidden;
+  background-image: url("game2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .container {
-    padding: 25.5em 43.5em;
+  padding: 25.5em 43.5em;
 }
 
 .btn {
-    -webkit-border-radius: 30;
-    -moz-border-radius: 30;
-    border-radius: 30px;
-    background: none;
-    font-family: Arial;
-    color: #fff;
-    border: none;
-    font-size: 35px;
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-    
-    
+  -webkit-border-radius: 30;
+  -moz-border-radius: 30;
+  border-radius: 30px;
+  background: none;
+  font-family: Arial;
+  color: #fff;
+  border: none;
+  font-size: 35px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+
+
 }
 
 .btn:hover {
-    
-    -webkit-border-radius: 30;
-    -moz-border-radius: 30;
-    border-radius: 30px;
-    background: #fa8ea2;
-    background-image: -webkit-linear-gradient(left, #fa8ea2, #b4defa);
-    background-image: -moz-linear-gradient(left, #fa8ea2, #b4defa);
-    background-image: -ms-linear-gradient(left, #fa8ea2, #b4defa);
-    background-image: -o-linear-gradient(left, #fa8ea2, #b4defa);
-    background-image: linear-gradient(to right, #fa8ea2, #b4defa);
-    text-decoration: none;
-    color: black;
+
+  -webkit-border-radius: 30;
+  -moz-border-radius: 30;
+  border-radius: 30px;
+  background: #fa8ea2;
+  background-image: -webkit-linear-gradient(left, #fa8ea2, #b4defa);
+  background-image: -moz-linear-gradient(left, #fa8ea2, #b4defa);
+  background-image: -ms-linear-gradient(left, #fa8ea2, #b4defa);
+  background-image: -o-linear-gradient(left, #fa8ea2, #b4defa);
+  background-image: linear-gradient(to right, #fa8ea2, #b4defa);
+  text-decoration: none;
+  color: black;
 
 }
-html, body{
+
+html,
+body {
   display: grid;
   height: 100vh;
   width: 100%;
   place-items: center;
 }
-::selection{
+
+::selection {
   background: #ff80bf;
 
 }
-.container{
+
+.container {
   background: #fff;
   max-width: 350px;
   width: 100%;
@@ -63,13 +67,15 @@ html, body{
   border-radius: 5px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.15);
 }
-.container form .title{
+
+.container form .title {
   font-size: 40px;
   font-weight: 600;
   margin: 20px 0 10px 0;
   position: relative;
 }
-.container form .title:before{
+
+.container form .title:before {
   content: '';
   position: absolute;
   height: 4px;
@@ -77,22 +83,25 @@ html, body{
   left: 0px;
   bottom: 3px;
   border-radius: 5px;
-  
+
 }
-.container form .input-box{
+
+.container form .input-box {
   width: 100%;
   height: 45px;
   margin-top: 25px;
   position: relative;
 }
-.container form .input-box input{
+
+.container form .input-box input {
   width: 100%;
   height: 100%;
   outline: none;
   font-size: 16px;
   border: none;
 }
-.container form .underline::before{
+
+.container form .underline::before {
   content: '';
   position: absolute;
   height: 2px;
@@ -101,7 +110,8 @@ html, body{
   left: 0;
   bottom: 0;
 }
-.container form .underline::after{
+
+.container form .underline::after {
   content: '';
   position: absolute;
   height: 2px;
@@ -113,15 +123,18 @@ html, body{
   transform-origin: left;
   transition: all 0.3s ease;
 }
-.container form .input-box input:focus ~ .underline::after,
-.container form .input-box input:valid ~ .underline::after{
+
+.container form .input-box input:focus~.underline::after,
+.container form .input-box input:valid~.underline::after {
   transform: scaleX(1);
   transform-origin: left;
 }
-.container form .button{
+
+.container form .button {
   margin: 40px 0 20px 0;
 }
-.container .input-box input[type="submit"]{
+
+.container .input-box input[type="submit"] {
   background: linear-gradient(to right, #99004d 0%, #ff0080 100%);
   font-size: 17px;
   color: #fff;
@@ -129,11 +142,13 @@ html, body{
   cursor: pointer;
   transition: all 0.3s ease;
 }
-.container .input-box input[type="submit"]:hover{
+
+.container .input-box input[type="submit"]:hover {
   letter-spacing: 1px;
   background: linear-gradient(to left, #99004d 0%, #ff0080 100%);
 }
-.container .option{
+
+.container .option {
   font-size: 14px;
   text-align: center;
 }
